Commit updates to navbar

--- a/Take-home_Ex/Take-home_Ex04/Take-home_Ex04.qmd
+++ b/Take-home_Ex/Take-home_Ex04/Take-home_Ex04.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Take-home Exercise 4: Prototyping Modules for Shiny Application"
-date: "18 Feb 2024"
+date: "?? Feb 2024"
 date-modified: "last-modified"
 editor: visual
 toc-depth: 4
